--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   dots_indicator: ^3.0.0
   shared_preferences: ^2.3.2
   firebase_core: ^3.6.0
+  dartz: ^0.10.1
+  firebase_auth: ^5.3.1
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
