--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   dartz: ^0.10.1
   firebase_auth: ^5.3.1
   flutter_bloc: ^8.1.6
+  get_it: ^8.0.2
 
 dev_dependencies:
   flutter_test:
