--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,12 @@ dependencies:
   firebase_auth: ^5.3.1
   flutter_bloc: ^8.1.6
   get_it: ^8.0.2
+  supabase_flutter: ^2.8.1
+  fluttertoast: ^8.2.8
+  google_sign_in: ^6.2.2
+  flutter_facebook_auth: ^7.1.1
+  carousel_slider: ^5.0.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
