--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   flutter_facebook_auth: ^7.1.1
   carousel_slider: ^5.0.0
   shimmer: ^3.0.0
+  animations: ^2.0.11
+  dio: ^5.7.0
+  webview_flutter: ^4.10.0
 
 dev_dependencies:
   flutter_test:
