--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,9 +1,14 @@
+import java.util.Properties
+
 pluginManagement {
     def flutterSdkPath = {
         def properties = new Properties()
         file("local.properties").withInputStream { properties.load(it) }
         def flutterSdkPath = properties.getProperty("flutter.sdk")
-        assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
+
+        if (flutterSdkPath == null || flutterSdkPath.trim().isEmpty()) {
+            throw new RuntimeException("Error: 'flutter.sdk' not set in local.properties. Make sure Flutter is installed and configured.")
+        }
         return flutterSdkPath
     }()
 
@@ -19,10 +24,18 @@ pluginManagement {
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
     id "com.android.application" version "8.1.0" apply false
-    // START: FlutterFire Configuration
     id "com.google.gms.google-services" version "4.3.15" apply false
-    // END: FlutterFire Configuration
     id "org.jetbrains.kotlin.android" version "1.8.22" apply false
+}
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://storage.googleapis.com/download.flutter.io' }
+        gradlePluginPortal()
+    }
 }
 
 include ":app"
