--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   webview_flutter: ^4.10.0
   image_picker: ^1.1.2
   path: ^1.9.0
+  app_links: ^6.3.3
 
 dev_dependencies:
   flutter_test:
